# otus8

./: CMakeLists.txt  README.md  async.cpp  async.h  build.sh  bulk.cpp  bulk.h  main.cpp  response_handler.cpp  response_handler.h  test_async.cpp  test_bulk.cpp
.github/workflows/: release.yml
